# Ai-powered-cmd-operating-system-demo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  admin _activity.txt  build.bat  user_activity.txt
src/: ai_bot.cpp  ai_bot.h  apps.py  auth.cpp  auth.h  auth.py  browser.py  crypto_utils.cpp  crypto_utils.h  crypto_utils.py  filesystem.cpp  filesystem.h  filesystem.py  logger.cpp  logger.h  main.cpp  settings_manager.py
